Removed unused methods. Renamed a class